# hello-rust

./: Cargo.toml  README.MD  test_client.py
assets/: map_0.tmx  map_1.tmx  settings.ron  untitled.tmx  untitled.tsx
assets/EPIC RPG World - Ancient Ruins V 1.9.1/ERW - Ancient Ruins V 1.9.1/TiledMap Editor/: Sample scene2.tmx
assets/scripts/: map_0.lua  test.lua
assets/tiled/: atlas_32.tsx  tiled.tiled-session
bevy_ecs_tilemap_plugin/: Cargo.toml
bevy_ecs_tilemap_plugin/src/: lib.rs  main.rs  tiled.rs
bevy_ecs_tilemap_plugin/src/helpers/: tiled.rs
bevy_mod_scripting_plugin/: Cargo.toml
bevy_mod_scripting_plugin/src/: console_integration.rs  lib.rs  main.rs
lightyear/common/: Cargo.toml
lightyear/common/src/: app.rs  settings.rs
lightyear/interest_management/: Cargo.toml
lightyear/interest_management/assets/: settings.ron
lightyear/interest_management/src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs  shared.rs
rust-lua-bind/: Cargo.toml
rust-lua-bind/src/: main.rs
src/: client.rs  level.rs  main.rs  network_main.rs  player.rs  protocol.rs  remote_file.rs  script.rs  script_main.rs  server.rs  settings.rs  shared.rs  tiles_main.rs
