[package]
name = "hello2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lightyear/interest_management",
    "bevy_mod_scripting_plugin",
    "bevy_ecs_tilemap_plugin"
]

[dependencies]
bevy = { version = "0.14.2", default-features = false }
interest_management = { path = "lightyear/interest_management" }
bevy_mod_scripting_plugin = { path = "bevy_mod_scripting_plugin" }
bevy_ecs_tilemap_plugin = { path = "bevy_ecs_tilemap_plugin" }