[package]
name = "hello2"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lightyear/interest_management",
    "bevy_mod_scripting_plugin",
    "bevy_ecs_tilemap_plugin"
]

[dependencies]
sha2 = "0.10.8"
bevy = { version = "0.14.2", default-features = false }
interest_management = { path = "lightyear/interest_management" }
serde = { version = "1.0.188", features = ["derive"] }
lightyear = { path = "../lightyear/lightyear" }
bevy_mod_scripting_plugin = { path = "bevy_mod_scripting_plugin" }
bevy_ecs_tilemap_plugin = { path = "bevy_ecs_tilemap_plugin" }
