[package]
name = "bevy_ecs_tilemap_plugin"
description = "A tilemap rendering plugin for bevy which is more ECS friendly by having an entity per tile."
version = "0.12.0"
authors = ["John Mitchell"]
homepage = "https://github.com/StarArawn/bevy_ecs_tilemap"
repository = "https://github.com/StarArawn/bevy_ecs_tilemap"
license-file = "LICENSE"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_asset",
    "bevy_sprite",
] }
log = "0.4"
bevy_ecs_tilemap = { path = "../../bevy_ecs_tilemap" }
ldtk_rust = { version = "0.6" }
env_logger = "0.10"
serde_json = { version = "1.0" }
tiled = { version = "0.11.0", default-features = false }
thiserror = { version = "1.0" }

[lib]
name = "bevy_ecs_tilemap_plugin"
path = "src/lib.rs"